# thrust_random_walk

./: .gitignore  CMakeLists.txt  README.md
src/: main.cu
